# graphrag_vs_vectorrag

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.devcontainer/: docker-compose.yml
app/: streamlit_app.py
config/: settings.yaml
data/corpus/: auditor_rotation_memo.txt  consolidated_financials.txt  cross_board_membership.txt  extracted_entities.json  extracted_relationships.json  fsa_sanction_nordbank.txt  ground_truth_entities.json  ground_truth_relationships.json  nordbank_risk_assessment.txt  nordfinance_annual_report_2024.txt  nordinsure_compliance_filing.txt  nordpay_board_minutes.txt  nordwealth_audit_report.txt  officer_cv_summaries.txt  regulatory_correspondence.txt  risk_taxonomy.txt
data/eval/: comparison.json
src/: config.py  network_guard.py  visualisation.py
src/corpus/: generator.py  schemas.py
src/evaluation/: comparison.py  question_bank.py  rag_triad.py
src/generation/: generator.py
src/ingestion/: chunker.py  embedder.py  entity_extractor.py  graph_store.py  vector_store.py
src/retrieval/: graph_retriever.py  hybrid_retriever.py  prompt_builder.py  vector_retriever.py
tests/unit/: test_chunker.py  test_entity_extractor.py  test_graph_store.py  test_question_bank.py  test_rag_triad.py  test_vector_store.py
